Finished the introduction notebook

--- a/scripts/bearing_case_part_I.ipynb
+++ b/scripts/bearing_case_part_I.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Investigating predictive maintenance using the Bearing case\n",
+    "# Introduction\n",
     "\n",
     "This is a recreation of a case study done by Victoria Catterson on [cowlet.org](http://cowlet.org/2013/09/15/understanding-data-science-feature-extraction-with-r.html) using the programming language R. It caught my attention since it involves a form of machine learning that can be used for predictive maintenance which I have been interested in lately. She already provides the code in R so to force myself to learn more from it I decided to recreate the case study using Python. This introduction is largely given by her on the link provided above with some minor changes.\n",
     "\n",
@@ -37,16 +37,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Populating the interactive namespace from numpy and matplotlib\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -147,7 +140,7 @@
        "4 -0.208 -0.129 -0.261 -0.098 -0.151 -0.205 -0.063 -0.066"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,9 +153,6 @@
     "import plotly.plotly as py\n",
     "import plotly.graph_objs as go\n",
     "%matplotlib inline\n",
-    "%matplotlib notebook\n",
-    "%pylab inline\n",
-    "pylab.rcParams['figure.figsize'] = (10, 6)\n",
     "\n",
     "basedir = 'D:/Databoers/data/bearings/1st_test/'\n",
     "test_file = '2003.10.22.12.06.24'\n",
@@ -381,10 +371,8 @@
     "# Feature Extraction\n",
     "So we currently have 2,156 files with 20,480 datapoints. So roughly 44 million datapoints, it is feasible to do computation with this using appropriate algorithms and cpu time. However we are going to extract some features to reduce the dimensionality of the data. A risk here is that by removing features we lose valuable information about the actual data.\n",
     "\n",
-    "# Processing the whole dataset\n",
-    "This step will require us to convert all the files into 4 files, one for each bearing. This means we will have 4 files each having 2,156 rows (one for each file) with the timestamp being the first column and the key features extracted following this calculated from the measurements at that time.\n",
-    "\n",
-    "A popular technique for studying mechanical components such as bearings is [Vibration Analysis]([https://en.wikipedia.org/wiki/Vibration) (VA). It can be effectively used to detect faults in rotating equipment to find rolling element bearing faults. VA uses units of Displacement, Velocity and Acceleration displayed as [Time Waveforms](https://en.wikipedia.org/wiki/Waveform). To use these we can transform them into a spectrum using a [Fast Fourier Transform](https://en.wikipedia.org/wiki/Fast_Fourier_transform) of these Time Waveforms. The Python package '[numpy](http://www.numpy.org/)' can be used for scientific computing, including the numpy.fft() function to perform a Fast Fourier Transform. Additionally we perform some steps to make the format more managable to plot.\n"
+    "### Fast Fourier Transform (FFT)\n",
+    "A popular technique for studying mechanical components such as bearings is [Vibration Analysis]([https://en.wikipedia.org/wiki/Vibration) (VA). It can be effectively used to detect faults in rotating equipment to find rolling element bearing faults. VA uses units of Displacement, Velocity and Acceleration displayed as [Time Waveforms](https://en.wikipedia.org/wiki/Waveform). To use these we can transform them into a spectrum using a [Fast Fourier Transform](https://en.wikipedia.org/wiki/Fast_Fourier_transform) of these Time Waveforms. The Python package '[numpy](http://www.numpy.org/)' can be used for scientific computing, including the numpy.fft() function to perform a Fast Fourier Transform. Additionally we perform some steps to make the format more managable to plot. To plot the following I decided to use the 'plotly' package which is very nice to generate interactive plots.\n"
    ]
   },
   {
@@ -427,22 +415,158 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The most noticable spikes seem to be on the lower frequencies. There is some activity around 4kHz and 8kHz as well. But lets zoom in on the lower frequencies first.\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~Databoers/12.embed\" height=\"525px\" width=\"100%\"></iframe>"
+      ],
+      "text/plain": [
+       "<plotly.tools.PlotlyDisplay object>"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "layout = go.Layout(title=\"Frequency vs Amplitude after FFT\",\n",
+    "                  xaxis=dict(title='Frequency', range=[0,1100]),\n",
+    "                  yaxis=dict(title='Amplitude', range=[0,500]))\n",
+    "fig = go.Figure(data=data, layout=layout)\n",
+    "\n",
+    "py.iplot(fig)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Other than the dc term (at 0Hz), the tallest spikes are just below 1kHz. There is also a large spike just below 500Hz, and two around 50Hz. The interactive plot enables us to check what frequencies the outliers are on. However we might want to put all of this in a table for easier viewing:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
+       "      <th>10</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Amplitude</th>\n",
+       "      <td>1937.262</td>\n",
+       "      <td>568.025449</td>\n",
+       "      <td>181.099925</td>\n",
+       "      <td>125.348528</td>\n",
+       "      <td>102.899711</td>\n",
+       "      <td>95.688706</td>\n",
+       "      <td>78.623396</td>\n",
+       "      <td>65.746995</td>\n",
+       "      <td>63.723709</td>\n",
+       "      <td>63.313016</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Frequency</th>\n",
+       "      <td>0.000</td>\n",
+       "      <td>986.424456</td>\n",
+       "      <td>993.261061</td>\n",
+       "      <td>493.212228</td>\n",
+       "      <td>979.587850</td>\n",
+       "      <td>994.237719</td>\n",
+       "      <td>969.821272</td>\n",
+       "      <td>971.774587</td>\n",
+       "      <td>57.622815</td>\n",
+       "      <td>978.611192</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 1           2           3           4           5   \\\n",
+       "Amplitude  1937.262  568.025449  181.099925  125.348528  102.899711   \n",
+       "Frequency     0.000  986.424456  993.261061  493.212228  979.587850   \n",
+       "\n",
+       "                   6           7           8          9           10  \n",
+       "Amplitude   95.688706   78.623396   65.746995  63.723709   63.313016  \n",
+       "Frequency  994.237719  969.821272  971.774587  57.622815  978.611192  "
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "top_outliers = sorted(zip(amplitude, frequency), reverse=True)[:10]\n",
+    "df = pd.DataFrame.from_records(top_outliers)\n",
+    "df.columns = ['Amplitude', 'Frequency']\n",
+    "\n",
+    "df = df.transpose()\n",
+    "df.columns = [i+1 for i in range(10)]\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The previously mentioned outliers appear to be on 49.8Hz, 57.6Hz, and 493Hz. Interestingly, the second and fourth largest components have a harmonic relationship (493Hz * 2 = 986Hz), which strongly suggests they are linked. It would be worth looking the frequencies of the largest five components as displayed here (exluding the 0Hz dc term measurement). Since each bearing has an x and y axis, this means there will be 10 features total. However this concludes our introduction, we will continue this investigation in the next post.\n",
+    "\n",
+    "\n",
+    "# Next Steps\n",
+    "\n",
+    "- Feature Selection\n",
+    "- Processing all files\n",
+    "- Standardizing functions\n",
+    "\n",
+    "These steps will require us to convert all the files into 4 files, one for each bearing. This means we will have 4 files each having 2,156 rows (one for each file) with the timestamp being the first column and the key features extracted following this calculated from the measurements at that time.\n",
+    "\n",
+    "Until next time!"
+   ]
   }
  ],
  "metadata": {
